--- a/Assets/App.css
+++ b/Assets/App.css
@@ -106,8 +106,8 @@ nav{
     width: 100%;
     height: 90px;
     line-height: 90px;
-    background: rgba(255, 255, 255, 0.7);
-    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
     padding-inline: 9vw;
     transition: .3s;
     z-index: 100;
@@ -197,9 +197,9 @@ nav{
     font-size: 12px;
     border-radius: 5px;
 }
-.featured-name{
-    font-size: 50px;
-    font-weight: 600;
+.featured-name p{
+    font-size: 30px;
+    font-weight: 800;
     color: var(--text-color-second);
     margin-block: 20px;
 }
@@ -593,20 +593,23 @@ footer{
         display: none;
     }
     .nav-menu.responsive{
-        left: 0;
+        right: 0;
     }
+ 
     .nav-menu{
         position: fixed;
-        top: 80px;
-        left: -100%;
+        top: 100px;
+        right: -100%;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(20px);
-        width: 100%;
-        min-height: 450px;
-        height: 90vh;
+        backdrop-filter: blur(500px);
+        border-radius: 5px;
+        z-index: 200;
+        width: 300px;
+        min-height: 300px;
+        height: 200px;
         transition: .3s;
     }
     .nav_menu_list{
