--- a/Assets/App.css
+++ b/Assets/App.css
@@ -412,7 +412,7 @@ h3{
     font-size: 15px;
     color: #777;
 }
-.project-box::after, .contact-info::after{
+.project-box::after{
     content: "";
     position: absolute;
     bottom: -100%;
@@ -426,7 +426,12 @@ h3{
 .contact-info:hover.contact-info::after{
     bottom: 0;
 }
+.project-box img{
+    width: 70px;
+    height: 70px;
+}
 .project-box:hover.project-box i,
+.project-box:hover.project-box img,
 .project-box:hover.project-box>h3,
 .project-box:hover.project-box>label
 {
@@ -458,7 +463,17 @@ h3{
     font-size: 30pt;
     font-weight: 800;
 }
-
+.experience h2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    gap: 5px;
+} 
+.experience img{
+    width: 50px;
+    height: 50px;
+}
 
 /* ----- CONTACT BOX ----- */
 .contact-info{
@@ -491,21 +506,11 @@ h3{
 .contact-info p>i{
     font-size: 18px;
 }
-.contact-info::after{
-    background: var(--color-white);
-}
 .contact-info a{
     text-decoration: none;
     color: var(--color-white);
 }
 
-.contact-info:hover.contact-info h2,
-.contact-info:hover.contact-info p,
-.contact-info:hover.contact-info a,
-.contact-info:hover.contact-info i{
-    color: #777;
-    z-index: 2;
-}
 
 /* ----- CONTACT FORM ----- */
 .form-control{
