--- a/Assets/App.css
+++ b/Assets/App.css
@@ -242,6 +242,7 @@ nav{
     flex-direction: column;
     width: 50%;
     padding-left: 20px;
+    z-index: 99999;
 }
 .featured-name p{
     font-size: 30px;
